# altium-schdoc-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: cli.py  markdown.py  mcp_server.py  parser.py
